log
Thu 28 Mar 2024 02:22:50 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   List* list = (List*)malloc(sizeof(List));
      |         ^~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
   36 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60a6ffc
Thu 28 Mar 2024 02:27:28 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
2e7a84c
Thu 28 Mar 2024 02:49:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
97cfb99
Thu 28 Mar 2024 02:52:09 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5ad202f
Thu 28 Mar 2024 02:52:57 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
a4cba0f
Thu 28 Mar 2024 02:53:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3542fd1
Thu 28 Mar 2024 02:54:27 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
1cae6a2
Thu 28 Mar 2024 02:55:27 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
d7e8220
Thu 28 Mar 2024 02:57:10 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
fdfe24f
Thu 28 Mar 2024 02:57:49 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
be3b9b2
Thu 28 Mar 2024 02:59:29 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
list.c: In function ‘nextList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3acb9d3
Thu 28 Mar 2024 02:59:56 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
list.c: In function ‘nextList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
88ab846
Thu 28 Mar 2024 03:01:36 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
0c4bc5f
Thu 28 Mar 2024 03:08:28 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|4
total_score: 25/70
0204f96
Thu 28 Mar 2024 03:17:02 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
c026aa3
Thu 28 Mar 2024 03:17:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9c5ee19
Fri 29 Mar 2024 09:30:53 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d22ed60
Fri 29 Mar 2024 09:32:01 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   73 |     return NULL;
      |            ^~~~
list.c:69:6: note: declared here
   69 | void pushFront(List * list, void * data)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3359688
Fri 29 Mar 2024 09:32:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4abdc6b
Fri 29 Mar 2024 09:33:46 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
b851458
Fri 29 Mar 2024 09:35:54 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
59f1517
Fri 29 Mar 2024 09:36:54 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
fda0c3f
Fri 29 Mar 2024 09:39:21 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
7ef2bef
Fri 29 Mar 2024 09:51:00 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
ffa4c27
Fri 29 Mar 2024 09:57:07 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
a71715a
Fri 29 Mar 2024 10:01:59 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:87:9: error: unused variable ‘newNode’ [-Werror=unused-variable]
   87 |   Node *newNode = createNode(data);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3e04a64
Fri 29 Mar 2024 10:02:14 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
6be2a0c
Fri 29 Mar 2024 10:45:43 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
1259ba7
Fri 29 Mar 2024 10:48:03 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
489ddc8
Fri 29 Mar 2024 10:58:41 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e37b146
Fri 29 Mar 2024 10:59:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dddee99
Fri 29 Mar 2024 11:01:30 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
  118 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
44525eb
Fri 29 Mar 2024 11:02:43 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
6e11f6e
Fri 29 Mar 2024 11:03:27 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
42fc190
Fri 29 Mar 2024 11:04:29 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
43cfe1a
Fri 29 Mar 2024 11:05:52 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
f738f32
Fri 29 Mar 2024 11:09:07 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:114:29: error: ‘Node’ has no member named ‘head’
  114 |   Node *left = list->current->head;
      |                             ^~
Compilation failed
0f27e54
Fri 29 Mar 2024 11:09:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8b5d2ef
Fri 29 Mar 2024 11:10:36 PM UTC: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
a9f060e
Fri 29 Mar 2024 11:11:25 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
a8cb7e1
